[project]
name = "comfystereo"
description = "Stereoscopic 3D toolkit for ComfyUI combining depth-based stereo generation with GPU acceleration, native VR viewing via PyOpenXR, and AI-powered StereoDiffusion. Supports 6+ modes for stereo conversion, VR headset viewing, and diffusion model stereo generation."
version = "2.1.2"
license = {file = "LICENSE"}
dependencies = ["torch", "numpy", "Pillow", "opencv-python", "numba", "scipy", "psutil"]

[project.optional-dependencies]
vr = ["pyopenxr>=1.0.0", "PyOpenGL>=3.1.0", "PyOpenGL_accelerate>=3.1.0", "glfw>=2.0.0", "pygame>=2.0.0"]
ai = ["diffusers>=0.21.0", "transformers", "accelerate", "einops", "tqdm", "scikit-image"]
all = ["pyopenxr>=1.0.0", "PyOpenGL>=3.1.0", "PyOpenGL_accelerate>=3.1.0", "glfw>=2.0.0", "pygame>=2.0.0", "diffusers>=0.21.0", "transformers", "accelerate", "einops", "tqdm", "scikit-image"]

[project.urls]
Repository = "https://github.com/Dobidop/ComfyStereo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "dobidop"
DisplayName = "ComfyStereo"
Icon = ""
